# rag-sample

./: .gitignore  Cargo.toml  README.md  build.rs  requirements.txt
src/: main.rs  ocr.rs  openvino.rs  pdf_reader.rs  text_store.rs  vector_store.rs  windows_api.rs
src-python/: Modelfile  exaone.py  main.py  query.py
src-python/blip/: blip_model.py  main.py
src-python/core/: vector_store.py
src-python/core/blip/: blip.py  blip_model.py
src-python/core/loader/: docx.py  image.py  pdf.py
src-python/scripts/: embeddings.py  ollama.py
src/native/: macos.rs  windows.rs
