[package]
name = "rag-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
hwp = "0.2.0"
langchain-rust = { version = "4.6.0", features = ["ollama", "pdf-extract", "qdrant"] }
pdf = "0.9.0"
pdf-extract = "0.7.10"
tantivy = "0.22.0"
tokio = "1.40.0"
windows = { version = "0.58.0", features = ["Win32_Storage", "Win32_Storage_FileSystem", "Win32_Security", "Win32_System", "Win32_System_Com", "Win32_System_Ole", "Win32_System_Search", "Win32_System_Threading", "Win32_System_Diagnostics", "Win32_System_Diagnostics_ToolHelp"] }
